# Kalkulator

./: .replit  add_missing_form_labels.py  add_purposes_to_all_languages.py  add_save_configuration_key.py  add_specific_missing_keys.py  advanced_translation_analyzer.py  advanced_translation_fixer.py  app.py  automated_translation_workflow.py  check_polish_completeness.py  check_polish_page.py  check_translation_quality.py  check_translations.py  cleanup_codebase.py  complete_polish_removal.py  complete_translation_workflow.py  comprehensive_language_fix.py  comprehensive_translation_checker.py  comprehensive_translation_cleanup.py  copy_missing_nested_keys.py  database.py  enhanced_translation_fixer.py  final_aggressive_translation_fix.py  final_translation_cleanup.py  fix_all_english_placeholders.py  fix_all_language_translations.py  fix_all_translation_issues.py  fix_cost_estimation_translations.py  fix_english_translations.py  fix_final_languages.py  fix_hvac_translations.py  fix_mixed_language_translations.py  fix_remaining_languages.py  fix_save_configuration_translations.py  fix_specific_translation_errors.py  fix_translations.py  language_purity_scanner.py  missing_translations.json  polish_page_findings.json  polish_page_report.txt  (+18 more)
.streamlit/: config.toml
attached_assets/: Pasted--Configurador-de-Contenedores-Configuraci-n-profesional-de-contenedores-Configuraci-n-b-sica-1748730674321.txt  Pasted--Estimation-de-Co-t-du-Projet-approximatif-Note-I-ve-kept-the-symbol-as-it-s-a-currency-s-1748856094128.txt  (+13 more)
locales/: cs.json  cs.json.backup  cs.json.sync_backup  (+29 more)
(+52 files in other folders)
