[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.6",
    "alembic>=1.16.1",
    "anthropic>=0.52.1",
    "google-generativeai>=0.8.5",
    "groq>=0.25.0",
    "openai>=1.82.0",
    "pandas>=2.2.3",
    "plotly>=6.1.2",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.45.1",
    "trafilatura>=2.0.0",
    "vulture>=2.14",
]
